# SeekRare

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
scripts/: __init__.py  annotate_vcf_csv_by_ncbi_gtf.py  annotate_wgs_gtex.py  bcftools_preprocess.sh  compound_het_filter.py  filter_dbsnp.py  merge_filter_clinvar_with_distance.py  vcf_to_gt_csv.py
scripts/genos/: 1_build_variant_ref_csv.py  2_export_attention_by_variant_no_vcf.py  3_plot_variant_reference_logfc.py  4_check_truth_peak.py
src/seekrare/: __init__.py  pipeline.py
src/seekrare/annotation/: __init__.py  alphafold3.py  cadd.py  clinvar_loader.py  combiner.py  gtex_eqtl.py  hpo_matcher.py  omim.py  splicing.py  vep_loader.py
src/seekrare/io/: csv_writer.py  vcf_parser.py
src/seekrare/llm/: __init__.py  alphafold_client.py  genos_client.py  symptom_parser.py
src/seekrare/preprocess/: __init__.py  bcftools_wrapper.py  clinvar_annotation.py  dbsnp_filter.py  eqtl_annotation.py  gene_annotation.py  omim_hpo_annotation.py  simplify_clinvar_csv.py  splicevardb.py  stage1_family.py  stage4_alphafold.py  stage4_genos.py  vcf_to_gt.py
src/seekrare/scoring/: __init__.py  engine.py  model_analysis.py  ranker.py  stage3_annotate.py  stage3_prep.py
