[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seekrare"
version = "0.1.0"
description = "LLM-powered rare disease diagnosis system with dual-dynamic variant scoring"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Wang Zelong", email = "wangz1lu@seekrare.dev"}
]
requires-python = ">=3.10"
dependencies = [
    "pysam>=0.21",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "anthropic>=0.18",
    "tqdm>=4.66",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "B"]
